--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,24 +1,53 @@
 alembic==1.8.1
 anyio==3.6.2
+asgi-lifespan==2.0.0
+attrs==22.1.0
+blessed==1.19.1
 certifi==2022.9.24
 charset-normalizer==2.1.1
 click==8.1.3
+coverage==6.5.0
+coveralls==3.3.1
+docopt==0.6.2
 fastapi==0.87.0
 FastAPI-SQLAlchemy==0.2.1
-greenlet==2.0.1
+flake8==4.0.1
+gevent==22.8.0
+greenlet==1.1.3.post0
 h11==0.14.0
+httpcore==0.16.2
+httpx==0.23.1
 idna==3.4
 importlib-metadata==5.0.0
 importlib-resources==5.10.0
+iniconfig==1.1.1
+inquirer==2.9.2
 Mako==1.2.4
 MarkupSafe==2.1.1
+mccabe==0.6.1
+packaging==21.3
+pluggy==0.13.1
 psycopg2-binary==2.9.5
+py==1.11.0
+pycodestyle==2.8.0
 pydantic==1.10.2
+pyflakes==2.4.0
+pyparsing==3.0.9
+pytest==6.2.4
+pytest-asyncio==0.15.1
+python-editor==1.0.4
+readchar==4.0.3
 requests==2.28.1
+rfc3986==1.5.0
+six==1.16.0
 sniffio==1.3.0
 SQLAlchemy==1.4.44
 starlette==0.21.0
+toml==0.10.2
 typing_extensions==4.4.0
 urllib3==1.26.12
 uvicorn==0.19.0
+wcwidth==0.2.5
 zipp==3.10.0
+zope.event==4.5.0
+zope.interface==5.5.2
