--- a/frontend/nginx/conf.d/default.conf
+++ b/frontend/nginx/conf.d/default.conf
@@ -24,7 +24,7 @@ server {
     root   /usr/share/nginx/html;
 
     if ($http_x_forwarded_proto = "http") {
-      return 301 https://$host$request_uri;
+        return 301 https://$host$request_uri;
     }
 
     location /api {
@@ -35,21 +35,21 @@ server {
         proxy_pass              http://localhost:5000;
     }
 
-    # location /config.js {
-    #     rewrite                 ^/api/config.js /config.js break;
-    #     add_header              Cache-Control "max-age=1800, public";
-    #     proxy_set_header        Host $host;
-    #     proxy_set_header        X-Real-IP $remote_addr;
-    #     proxy_set_header        X-Forwarded-Host $host;
-    #     proxy_ignore_headers    X-Accel-Expires Expires Cache-Control Set-Cookie;
-    #     proxy_buffering         on;
-    #     proxy_cache             STATIC;
-    #     proxy_cache_valid       200 206 1d;
-    #     proxy_cache_valid       any 60m;
-    #     proxy_cache_use_stale   error timeout invalid_header updating
-    #                             http_500 http_502 http_503 http_504;
-    #     proxy_pass              http://localhost:5000;
-    # }
+    location /config.js {
+        rewrite                 ^/api/config.js /config.js break;
+        add_header              Cache-Control "max-age=1800, public";
+        proxy_set_header        Host $host;
+        proxy_set_header        X-Real-IP $remote_addr;
+        proxy_set_header        X-Forwarded-Host $host;
+        proxy_ignore_headers    X-Accel-Expires Expires Cache-Control Set-Cookie;
+        proxy_buffering         on;
+        proxy_cache             STATIC;
+        proxy_cache_valid       200 206 1d;
+        proxy_cache_valid       any 60m;
+        proxy_cache_use_stale   error timeout invalid_header updating
+                                http_500 http_502 http_503 http_504;
+        proxy_pass              http://localhost:5000;
+    }
 
     # location /worker {
     #     rewrite                 ^/worker/(.*) /$1 break;
