--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,9 +7,15 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.0.3",
+    "d3-geo": "^3.0.1",
+    "d3-scale": "^4.0.2",
+    "leaflet": "^1.9.3",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.0",
     "react-scripts": "5.0.1",
+    "topojson-client": "^3.1.0",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
