--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.0.3",
+    "axios": "^1.2.0",
     "d3-geo": "^3.0.1",
     "d3-scale": "^4.0.2",
     "leaflet": "^1.9.3",
