--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.0",
+    "react-leaflet-cluster": "^2.0.0",
     "react-scripts": "5.0.1",
     "topojson-client": "^3.1.0",
     "web-vitals": "^2.1.4"
