--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -20,8 +20,8 @@ services:
     network_mode: service:mainnetwork
   backend:
     environment:
-      - AUTH0_CLIENT=$AUTH0_CLIENT_ID_PROD
-      - AUTH0_USER=$AUTH0_USER_PROD
-      - AUTH0_PWD=$AUTH0_PWD_PROD
+      - AUTH0_CLIENT=$AUTH0_CLIENT
+      - AUTH0_USER=$AUTH0_USER
+      - AUTH0_PWD=$AUTH0_PWD
 volumes:
   pg-admin-data:
