--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -14,8 +14,10 @@ FastAPI-SQLAlchemy==0.2.1
 flake8==4.0.1
 gevent==22.8.0
 greenlet==1.1.3.post0
+gunicorn==20.1.0
 h11==0.14.0
 httpcore==0.16.2
+httptools==0.5.0
 httpx==0.23.1
 idna==3.4
 importlib-metadata==5.0.0
@@ -36,7 +38,9 @@ pyflakes==2.4.0
 pyparsing==3.0.9
 pytest==6.2.4
 pytest-asyncio==0.15.1
+python-dotenv==0.21.0
 python-editor==1.0.4
+PyYAML==6.0
 readchar==4.0.3
 requests==2.28.1
 rfc3986==1.5.0
@@ -48,7 +52,10 @@ toml==0.10.2
 typing_extensions==4.4.0
 urllib3==1.26.12
 uvicorn==0.19.0
+uvloop==0.17.0
+watchfiles==0.18.1
 wcwidth==0.2.5
+websockets==10.4
 zipp==3.10.0
 zope.event==4.5.0
 zope.interface==5.5.2
