[#6] Eslint and prettier check

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,14 +23,31 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
+    "@babel/core": "^7.16.12",
+    "@babel/eslint-parser": "^7.16.5",
+    "@babel/plugin-syntax-object-rest-spread": "^7.8.3",
+    "@babel/preset-react": "^7.16.7",
     "cross-env": "^7.0.3",
-    "http-proxy-middleware": "^2.0.2"
+    "eslint": "^8.7.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-export": "^0.1.2",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jest": "^26.1.1",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "http-proxy-middleware": "^2.0.2",
+    "prettier": "^2.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint --config .eslintrc.json src --ext .js,.jsx",
+    "lint:ci": "eslint --config .eslintrc.prod.json src --ext .js,.jsx",
+    "prettier": "prettier --check src"
   },
   "eslintConfig": {
     "extends": [
