--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,6 +9,7 @@ click==8.1.3
 coverage==6.5.0
 coveralls==3.3.1
 docopt==0.6.2
+Faker==15.3.4
 fastapi==0.87.0
 FastAPI-SQLAlchemy==0.2.1
 flake8==4.0.1
@@ -28,7 +29,9 @@ jsmin==3.0.1
 Mako==1.2.4
 MarkupSafe==2.1.1
 mccabe==0.6.1
+numpy==1.23.5
 packaging==21.3
+pandas==1.5.2
 pluggy==0.13.1
 psycopg2-binary==2.9.5
 py==1.11.0
@@ -38,8 +41,10 @@ pyflakes==2.4.0
 pyparsing==3.0.9
 pytest==6.2.4
 pytest-asyncio==0.15.1
+python-dateutil==2.8.2
 python-dotenv==0.21.0
 python-editor==1.0.4
+pytz==2022.6
 PyYAML==6.0
 readchar==4.0.3
 requests==2.28.1
