--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,20 @@
 ---
 repos:
+ - repo: https://github.com/psf/black
+   rev: stable
+   hooks:
+    - id: black
+      args: ["--line-length", "79", "./backend"]
+      language_version: python3.8.5
  - repo: https://github.com/PyCQA/flake8
    rev: 6.0.0
    hooks:
     - id: flake8
+      args: ["./backend"]
+ - repo: https://github.com/pre-commit/mirrors-prettier
+   rev: ""
+   hooks:
+    - id: prettier
+      additional_dependencies:
+       - prettier@2.8.1
+      args: ["--check ./frontend/src"]
