--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,7 +1,7 @@
 ---
 repos:
  - repo: https://github.com/psf/black
-   rev: stable
+   rev: 22.12.0
    hooks:
     - id: black
       args: ["--line-length", "88", "./backend"]
@@ -12,7 +12,7 @@ repos:
     - id: flake8
       args: ["./backend"]
  - repo: https://github.com/pre-commit/mirrors-prettier
-   rev: ""
+   rev: "v3.0.0-alpha.4"
    hooks:
     - id: prettier
       additional_dependencies:
