--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,5 @@
 alembic==1.8.1
+alembic-utils==0.7.8
 anyio==3.6.2
 asgi-lifespan==2.0.0
 attrs==22.1.0
@@ -13,6 +14,7 @@ Faker==15.3.4
 fastapi==0.87.0
 FastAPI-SQLAlchemy==0.2.1
 flake8==4.0.1
+flupy==1.2.0
 gevent==22.8.0
 greenlet==1.1.3.post0
 gunicorn==20.1.0
@@ -32,6 +34,7 @@ mccabe==0.6.1
 numpy==1.23.5
 packaging==21.3
 pandas==1.5.2
+parse==1.19.0
 pluggy==0.13.1
 psycopg2-binary==2.9.5
 py==1.11.0
