--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "d3-scale": "^4.0.2",
     "leaflet": "^1.9.3",
     "lodash": "^4.17.21",
+    "pullstate": "^1.25.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.0",
@@ -26,7 +27,7 @@
     "@babel/core": "^7.16.12",
     "@babel/eslint-parser": "^7.16.5",
     "@babel/plugin-syntax-object-rest-spread": "^7.8.3",
-    "@babel/preset-react": "^7.16.7",
+    "@babel/preset-react": "^7.18.6",
     "cross-env": "^7.0.3",
     "eslint": "^8.7.0",
     "eslint-config-prettier": "^8.3.0",
