--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.0.3",
+    "antd-table-saveas-excel": "^2.2.1",
     "axios": "^1.2.0",
     "d3-geo": "^3.0.1",
     "d3-scale": "^4.0.2",
+    "echarts": "^5.4.2",
+    "echarts-for-react": "^3.0.2",
     "leaflet": "^1.9.3",
     "lodash": "^4.17.21",
     "pullstate": "^1.25.0",
