--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,9 @@
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.0",
     "react-leaflet-cluster": "^2.0.0",
+    "react-router-dom": "6.2.2",
     "react-scripts": "5.0.1",
+    "sass": "^1.60.0",
     "topojson-client": "^3.1.0",
     "web-vitals": "^2.1.4"
   },
