--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -25,6 +25,7 @@ services:
       - AUTH0_PWD=$AUTH0_PWD
       - SKIP_MIGRATION=yes
     depends_on:
-      - db
+      db:
+        condition: service_healthy
 volumes:
   pg-data:
