--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -6,6 +6,11 @@ services:
     image: postgres:12-alpine
     environment:
       - POSTGRES_PASSWORD=password
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 2s
+      timeout: 5s
+      retries: 5
     volumes:
       - ./db/docker-entrypoint-initdb.d.ci:/docker-entrypoint-initdb.d
       - pg-data:/var/lib/postgresql/data
