--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "pullstate": "^1.25.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.5",
     "react-leaflet": "^4.2.0",
     "react-leaflet-cluster": "^2.1.0",
     "react-router-dom": "6.2.2",
