--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "lodash": "^4.17.21",
     "pullstate": "^1.25.0",
     "react": "^18.2.0",
+    "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
     "react-leaflet": "^4.2.0",
