--- a/ci/k8s/deployment.yml.template
+++ b/ci/k8s/deployment.yml.template
@@ -59,6 +59,13 @@ spec:
                 secretKeyRef:
                   name: siwins
                   key: auth0-client
+            - name: GOOGLE_APPLICATION_CREDENTIALS
+              value: /secrets/credentials.json
+          volumeMounts:
+            - name: siwins-secrets
+              mountPath: /secrets/credentials.json
+              subPath: siwins-service-account.json
+              readOnly: true
           readinessProbe:
             httpGet:
               path: /health-check
