--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -68,3 +68,8 @@ zipp==3.10.0
 zope.event==4.5.0
 zope.interface==5.5.2
 AkvoResponseGrouper==1.2.9a0
+xlrd==1.2.0
+xlwt==1.3.0
+aiofiles==0.7.0
+google-cloud-storage==1.42.3
+XlsxWriter==3.0.2
