--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -27,6 +27,8 @@ services:
       - AUTH0_CLIENT=$AUTH0_CLIENT
       - AUTH0_USER=$AUTH0_USER
       - AUTH0_PWD=$AUTH0_PWD
+      - MAILJET_SECRET=$MAILJET_SECRET
+      - MAILJET_APIKEY=$MAILJET_APIKEY
   frontend:
     volumes:
       - ./docs/build/html:/app/public/documentation:delegated
