--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -29,6 +29,8 @@ services:
       - AUTH0_USER=$AUTH0_USER
       - AUTH0_PWD=$AUTH0_PWD
       - SKIP_MIGRATION=yes
+      - MAILJET_SECRET=$MAILJET_SECRET
+      - MAILJET_APIKEY=$MAILJET_APIKEY
     depends_on:
       db:
         condition: service_healthy
