--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -74,3 +74,7 @@ aiofiles==0.7.0
 google-cloud-storage==1.42.3
 XlsxWriter==3.0.2
 orjson==3.8.12
+mailjet-rest==1.3.4
+bs4==0.0.1
+lxml==4.6.4
+Jinja2==3.0.3
