--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -29,6 +29,7 @@ services:
       - AUTH0_PWD=$AUTH0_PWD
       - MAILJET_SECRET=$MAILJET_SECRET
       - MAILJET_APIKEY=$MAILJET_APIKEY
+      - NOTIFICATION_RECIPIENTS=$NOTIFICATION_RECIPIENTS
   frontend:
     volumes:
       - ./docs/build/html:/app/public/documentation:delegated
