--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,8 @@
     "axios": "^1.2.0",
     "d3-geo": "^3.0.1",
     "d3-scale": "^4.0.2",
+    "dexie": "^3.2.4",
+    "dexie-react-hooks": "^1.1.6",
     "echarts": "^5.4.2",
     "echarts-for-react": "^3.0.2",
     "leaflet": "^1.9.3",
