--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "echarts-for-react": "^3.0.2",
     "leaflet": "^1.9.3",
     "lodash": "^4.17.21",
+    "lz-string": "^1.5.0",
     "pullstate": "^1.25.0",
     "react": "^18.2.0",
     "react-countup": "^6.4.2",
