[#170] Install react-resizeable lib

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "react-draggable": "^4.4.5",
     "react-leaflet": "^4.2.0",
     "react-leaflet-cluster": "^2.1.0",
+    "react-resizable": "^3.0.5",
     "react-router-dom": "6.2.2",
     "react-scripts": "5.0.1",
     "sass": "^1.60.0",
