--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,8 @@ services:
       - AUTH0_PWD=$AUTH0_PWD
       - MAILJET_SECRET=${MAILJET_SECRET}
       - MAILJET_APIKEY=${MAILJET_APIKEY}
-      - NOTIFICATION_RECIPIENTS={$NOTIFICATION_RECIPIENTS}
+      - NOTIFICATION_RECIPIENTS=S{NOTIFICATION_RECIPIENTS}
+      - SIWINS_INSTANCE=${SIWINS_INSTANCE}
     depends_on:
       db:
         condition: service_healthy
