--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -32,6 +32,7 @@ services:
       - MAILJET_SECRET=notset
       - MAILJET_APIKEY=notset
       - NOTIFICATION_RECIPIENTS=notset
+      - SIWINS_INSTANCE=test
     depends_on:
       db:
         condition: service_healthy
