--- a/ci/k8s/siwins-data-sync.yml.template
+++ b/ci/k8s/siwins-data-sync.yml.template
@@ -28,6 +28,11 @@ spec:
               - echo Running Data Sync;
                 ./sync.sh;
             env:
+              - name: SIWINS_INSTANCE
+                valueFrom:
+                  secretKeyRef:
+                    name: siwins
+                    key: siwins-instance
               - name: DATABASE_URL
                 valueFrom:
                   secretKeyRef:
